@@ -2,7 +2,7 @@ Source: qxgedit
 Section: sound
 Priority: extra
 Maintainer: Rui Nuno Capela <rncbc@rncbc.org>
-Build-Depends: debhelper (>= 5), libqt4-dev (>= 4.1), libasound2-dev
+Build-Depends: debhelper (>= 5), libqt4-dev (>= 4.2), libasound2-dev
 Standards-Version: 3.7.2
 
 Package: qxgedit
