@@ -16,7 +16,7 @@ Packager:	rncbc.org
 
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-buildroot
 
-BuildRequires:	libqt4-devel >= 4.1
+BuildRequires:	libqt4-devel >= 4.2
 BuildRequires:	alsa-devel
 
 %description
